--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -34,6 +34,11 @@
     font-size: 1.1rem;
 }
 
+.phone-link {
+    text-decoration: none;
+    color: var(--primary);
+    font-weight: 800;
+}
 
 
 /* ----------
